feat: pr and harmonisation prior commit of best pr

--- a/docs/50_data_publication/60_data_availability_statement.mdx
+++ b/docs/50_data_publication/60_data_availability_statement.mdx
@@ -6,11 +6,15 @@ slug: "/data_availability_statement"
 
 ## Introduction
 
-The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
+The data availability statement or a similarly termed section, depending on the publisher, is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
 
-The data availability statement enables [linking of the manuscript](/docs/data_publication) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [DOIs](/docs/pid), alternatively using the repository-specific identifiers or accession numbers.
+The data availability statement enhances findability and enables [linking of the manuscript](/docs/best_practice) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [PIDs](/docs/pid) such as DOIs, alternatively using the repository-specific identifiers or accession numbers.
 
-Depending on the publisher, the data availability statement may be direclty added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
+Depending on the publisher, the data availability statement may be directly added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
+
+:::info Info:
+PIDs to the corresponding dataset(s) of a scientific article, with one of the scientific publishers, should be mentioned in the data availability statement, while PIDs to datasets from other researchers which are reused and cited should be added to the reference section. This distinction is important, because the link to the dataset in the PID metadata is differently set, depending whether the dataset is a directly related source of information or a referenced source as its information is reused.
+:::
 
 ## Templates for Data Availability Statements
 
