--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -16,7 +16,7 @@ This article applies to all researchers who want to publish their data.
 
 In chemical research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, the scientific community also requires the data that the results were based on. 
 
-Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by also considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [data formats standards](/docs/format_standards) for analytical data, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures), information on [license](/docs/licenses/) and [provenance information](/docs/provenance/) adds value to the research results and enables discovery and reuse. 
+Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [provenance information](/docs/provenance/), [data formats standards](/docs/format_standards) for analytical data, information on the [license](/docs/licenses/) applied, and and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. 
 
 Data publication is essential in ensuring findings are transparent and reproducible.
 
@@ -38,17 +38,17 @@ There are two main ways to publish research data:
 - publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
 
 :::info Info:
-Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories require manual FAIRification. 
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories requires manual FAIRification. 
 :::
 
 [Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
 
-Further information on other repositories including a list of recommended chemistry-friendly repositories is provided in our articles on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
+Further information on repositories including a list of recommended chemistry-friendly repositories is provided in our articles on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
 
-A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
+A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/).
 
 :::danger Notice:  
-Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example Datasets](/docs/datasets) for one of NFDI4Chem's featured datasets!
+Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example Datasets](/docs/datasets) for inspiration by one of NFDI4Chem's featured datasets!
 :::
 
 ## Sources and further information
