--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -9,7 +9,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ## Introduction to our Recommendations
 
-The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researchers for collecting, storing, processing, analysing, publishing and re-using research data by establishing a federation of repositories. Furthermore, we include associated and further relevant trusted chemistry-friendly repositories to ours lists of recommendations. Aiming to identify the **core repositories** that are part of the federation and have potential for development, the TA3 repository team has selected the following criteria: 
+The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researchers for collecting, storing, processing, analysing, publishing and reusing research data by establishing a federation of repositories. Furthermore, we include associated and further relevant **trusted, chemistry-friendly repositories** to ours lists of recommendations. Aiming to identify the **core repositories** that are part of the federation and have potential for development, the TA3 repository team has selected the following criteria: 
 
 - The repository is suitable for the deposition of molecule related data
 - The repository contains reusable data or functionality such as viewers, editors or analysis tools that fulfil the needs of the NFDI4Chem community 
@@ -17,20 +17,20 @@ The consortium for chemistry (NFDI4Chem) in the NFDI aims to support the researc
 - The operators of the repositories have declared their willingness to adapt their services to the standards developed by NFDI4Chem including the FAIR data principles 
 - The repository operators can be funded in accordance with the funding guidelines of the NFDI, i.e. the main operator is based in Germany and is a non-profit organisation.
 
-The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted chemistry-friendly repositories. asd
+The repositories that fulfil the above mentioned criteria are reported in the following list as **core repositories**. In case that not all criteria are fulfilled they are included as associated or relevant trusted, chemistry-friendly repositories.
 
 ## Core Repositories
 
 - [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br/>Field-specific sample and reaction centric repository including analysis data such as NMR, IR and mass data.
 - [MassBank EU](https://massbank.eu/MassBank/)<br/>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
-- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br/>Generic, multi-disciplinary repository that offers a free and reliable home for all chemical research data that do not fulfill the specifications of field-specific repositories. 
+- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br/>Generic, multi-domain repository that offers a free and reliable home for all chemical research data that do not fulfill the specifications of field-specific repositories. 
 - [STRENDA DB](https://www.beilstein-strenda-db.org/)<br/>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
 - [SUPRABANK](https://suprabank.org/)<br/>Field-specific repository for intermolecular interactions data.
 
 ## Associated Repositories
 
-- [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/structures/)<br/>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC)
-- [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals and intermetallic compounds, operated by FIZ Karlsruhe
+- [Cambridge Structural Database](https://www.ccdc.cam.ac.uk/structures/)<br/>Field-specific repository for x-ray diffraction data of molecules generally containing at least carbon and hydrogen, operated by the Cambridge Crystallographic Data Centre (CCDC).
+- [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals and intermetallic compounds, operated by FIZ Karlsruhe.
 - [Joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/)
 
 ## Other Relevant Repositories
@@ -49,12 +49,14 @@ The repositories that fulfil the above mentioned criteria are reported in the fo
 Moreover, the consortium supports further databases and data repositories on interoperability issues and encourages them to participate in the development of NFDI4Chem standards and interfaces. 
 
 :::danger Notice: 
-These lists will be continuously updated with further recommendations on trusted chemistry-friendly repositories.
+These lists will be continuously updated with further recommendations on trusted and chemistry-friendly repositories.
 :::
+
+Further details of the repositories listed above is provided in the following sections.
 
 ## Mapping Matrix Data-Repository
 
-Based on the results generated by a [survey](https://doi.org/10.1002/zaac.202000339) of the NFDI4Chem consortium in 2020 and the interviews with the repository leaders performed by the TA3 repository team of NFDI4Chem, a list of the most common data types and formats within this community was collected and is reported in Table 1. Table 1 displays which data types are most commonly collected within the chemistry community and suggests which repository is most suitable for storing your specific data type and is visualised in the following figure:
+Based on the results generated by a [survey](https://doi.org/10.1002/zaac.202000339) of the NFDI4Chem consortium in 2020 and the yearly interviews with the repository leaders performed by the TA3 repository team of NFDI4Chem, a list of the most common data types and formats within this community was collected and is reported in the table 1. This table displays which data types are most commonly collected within the chemistry community and suggests which repository is most suitable for storing your specific data type. Table 1 is also visualised in the following figure:
 
 <img align="center" src={useBaseUrl('/img/data_pub/RADAR4Chem_RepoTrack_ CM3.5_fixed.svg')} alt="" width="100%" />
 
@@ -225,3 +227,6 @@ Quick stats:
  
 Nomad is a public repository operating since 2015 that is hosted at the MPCDF (Max Planck Computing and Data Facility) in Garching, Munich. It contains over 12 millions of data sets (simulations) generated from over 500 users, 98% of which  is published. DOIs are attributed to almost half of them. Their target audience are solid state physicists and theoretical chemists. Data on computational materials science, computational chemistry and molecular physics are those typically contained in the repository. There is a simulation data recognition process during upload and the repository supports the input/output formats of 50 different codes. NOMAD offers an API for data import and export. The repository is recommended by <a href="https://www.nature.com/sdata/policies/repositories#materials">Scientific Data</a> of the Nature publishing group. 
 </details>
+
+----
+Main author: [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
