--- a/docs/50_data_publication/10_repositories.mdx
+++ b/docs/50_data_publication/10_repositories.mdx
@@ -17,7 +17,7 @@ Repositories can be classified mainly according to:
 <!--- the storage period of the data (e.g. at least 10 years) or
 the data access and -reuse policy -->
 
-Repositories can be hosted at institutional server or are provided by broader organisations or consortia such as NFDI4Chem.
+Repositories can be hosted at institutional server or are provided by broader organisations or consortia such as NFDI4Chem. The use of repositories is essential for data deposition according to the [FAIR principles](/docs/fair).
 
 ## How do repositories work?
 
@@ -38,7 +38,7 @@ Because of the multitudes of data repositories existing, users could better orie
 However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. Moreover, researchers should take the reuse policy, metadata sharing and availability, long-term availability of data and public accessibility of a repository into account, which is often not obvious or easy to find out.
 
 :::info Info:
-To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a lists of trusted, chemistry-friendly repositories in the guide on [How to Find the Right Repository](/docs/choose_repository).
+To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a lists of trusted, chemistry-friendly repositories in the guide on [how to choose the right repository](/docs/choose_repository).
 :::
 
 ## Sources and further information
