--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -53,13 +53,13 @@ Are you asking yourself right now, "That's it?" Yes, that's it! As mentioned abo
 <!--- ![BestPractice](/img/topics/BestPractice.png) <br/>
 **Figure 1:** Section of the experimental part in journal publication DOI: [10.1039/d1dt00832c](https://doi.org/10.1039/D1DT00832C), citation of data publication marked in orange. Ti: This should not be the way to go which should be highlighted with a figure--->
 
-<!--- Several working groups of NFDI4Chem and beyond already deposit research data in the [Chemotion-Repository](https://www.chemotion-repository.net/welcome). For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
+ Several working groups of NFDI4Chem and beyond already deposit research data in the [Chemotion-Repository](https://www.chemotion-repository.net/welcome). For a better understanding of how data publications are linked to related journal publications, the following examples including their data (open-access) can be viewed:
 
 - [Modular Synthesis of trans‐A2B2‐Porphyrins with Terminal Esters: Systematically Extending the Scope of Linear Linkers for Porphyrin‐Based MOFs](https://doi.org/10.1002/chem.202003885)
 - [Next Generation of Zinc Bisguanidine Polymerization Catalysts towards Highly Crystalline, Biodegradable Polyesters](https://doi.org/10.1002/anie.202008473)
 - [Synthesis of new pyrazolo[1,2,3]triazines by cyclative cleavage of pyrazolyltriazenes](https://doi.org/10.3762/bjoc.17.187)
 - [Exceptional Substrate Diversity in Oxygenation Reactions Catalyzed by a Bis(μ-oxo) Copper Complex](http://dx.doi.org/10.1002/chem.202000664)
-- [Insertion of [1.1.1]propellane into aromatic disulfides](https://doi.org/10.3762/bjoc.15.114) Ti: We might move this to Chemotion Documentation--->
+- [Insertion of [1.1.1]propellane into aromatic disulfides](https://doi.org/10.3762/bjoc.15.114) Ti: We might move this to Chemotion Documentation
 
 ## Best practice for generic repositories
 
