--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/10_research_group_leader.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/10_research_group_leader.mdx
@@ -13,48 +13,48 @@ This article applies to research group leaders, who plan to organise the RDM of 
 
 <img id="datalife" alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10" />
 
-As research group leader, you are responsible for the [research data organisation](/docs/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/dmp) in order to ensure that the data are archived in a [FAIR](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](/docs/data_publication) of FAIR data.
+Als Forschungsgruppenleiter sind Sie für die [Forschungsdatenorganisation](/docs/data_organisation) Ihrer Gruppe verantwortlich. Viele Forschungseinrichtungen und auch die meisten Förderinstitutionen fordern oder geben interne RDM-Richtlinien vor (z.B. [DFG-Checkliste](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU-Richtlinien) und empfehlen die Erstellung von [Datenmanagementplänen](/docs/dmp), um eine [FAIRe](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) Archivierung der Daten zu gewährleisten. Viele Fördereinrichtungen fördern oder erzwingen sogar die [Veröffentlichung](/docs/data_publication) von FAIR-Daten.
 
-In recent years, many new digital tools have been developed to support researchers in their RDM needs. The technical possibilities are briefly outlined below. For more details, please refer to the related chapters, many of which are directly linked.
+In den letzten Jahren wurden viele neue digitale Werkzeuge entwickelt, um Forscher bei ihren RDM-Anforderungen zu unterstützen. Die technischen Möglichkeiten werden im Folgenden kurz skizziert. Weitere Einzelheiten finden Sie in den entsprechenden Kapiteln, von denen viele direkt verlinkt sind.
 
-:::danger Consider
-Digitisation of research data only **after** the end of the production process is most tedious and time-consuming.
+:::danger Berücksichtigen Sie
+Die Digitalisierung von Forschungsdaten erst **nach** dem Ende des Produktionsprozesses ist sehr mühsam und zeitaufwändig.
 :::
 
-Therefore, it is more efficient to capture the data and their corresponding [metadata](/docs/metadata) as early as from the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/eln) facilitate everyday work considerably: the planning of the experiment, the documentation of experimental procedures, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: complete experiment reports with analytical data (e.g. for the supporting information for [publications](/docs/data_publication)) can be generated automatically by the ELN.
+Daher ist es effizienter, die Daten und die zugehörigen [Metadaten](/docs/metadata) bereits bei der Planung des Experiments zu erfassen. Dabei erleichtern [electronic lab notebooks (ELN)](/docs/eln) die tägliche Arbeit erheblich: Die Planung des Experiments, die Dokumentation der experimentellen Abläufe, die Auswertung der gewonnenen spektroskopischen Daten sowie die Peakzuordnung können in einer digitalen Umgebung erfolgen. Und noch besser: komplette Experimentberichte mit Analysedaten (z.B. für die Begleitinformationen zu [Publikationen](/docs/data_publication)) können vom ELN automatisch erstellt werden.
 
-The time invested to set up the ELN and to organise the experiments thus pays off in numerous ways: In addition to facilitating [documentation](/docs/data_documentation), the storage of the produced data in a FAIR format in a [repository](/docs/repositories) is simplified. Also, the [data organisation](/docs/data_organisation) for the research group can be improved by setting up an internal database. This is invaluable for growing working groups.
+Die Zeit, die in die Einrichtung des ELN und die Organisation der Experimente investiert wird, zahlt sich also in mehrfacher Hinsicht aus: Neben der Erleichterung der [Dokumentation](/docs/data_documentation) wird die Speicherung der erzeugten Daten in einem FAIR-Format in einem [repository](/docs/repositories) vereinfacht. Auch die [Datenorganisation](/docs/data_organisation) für die Forschungsgruppe kann durch die Einrichtung einer internen Datenbank verbessert werden. Dies ist von unschätzbarem Wert für wachsende Arbeitsgruppen.
 
-## How to start
+## Wie man anfängt
 
-The choice of ELN and of the repository for the data deposition depends on the chemical sub-domain. Please have a look at the [user profiles](/docs/role_guide) for domain-specific details.
-Moreover, the [best practice examples](/docs/best_practice) can help visualise how efficient RDM works.
+Die Wahl des ELN und des Speicherortes für die Datenablage hängt von der chemischen Sub-Domäne ab. Bitte werfen Sie einen Blick auf die [user profiles](/docs/role_guide) für domänenspezifische Details.
+Außerdem können die [best practice examples](/docs/best_practice) dabei helfen, zu veranschaulichen, wie effizient RDM funktioniert.
 
-Of all chemists, 60 % work synthetically. There are many advantages of using the ELN [Chemotion](https://eln.chemotion.net/home) as a whole working group.
+Von allen Chemikern arbeiten 60 % synthetisch. Es hat viele Vorteile, das ELN [Chemotion](https://eln.chemotion.net/home) als ganze Arbeitsgruppe zu nutzen.
 
-:::tip Advantages of Chemotion
+:::tip Die Vorteile von Chemotion
 
-- Free and transparent [open source software](https://github.com/ComPlat/chemotion_ELN)
-- Capturing data directly from the experiment planning phase
-- Experimental reports for publications/theses automatically generated by the software
-- Improving collaboration and data exchange within the group
-- Seamless export of [FAIR](/docs/fair) and citable records to the [Chemotion Repository](https://www.chemotion-repository.net/welcome).
-- Integration of [SciFinder](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder) search
-- Many spectra can be directly analysed in the Chemotion environment using [ChemSpectra](https://eln.chemotion.net/chemspectra-editor) (including a plausibility check for NMR spectra)
+- Kostenlos und transparent [Open-Source-Software] (https://github.com/ComPlat/chemotion_ELN)
+- Datenerfassung direkt aus der Planungsphase des Experiments
+- Automatische Erstellung von Versuchsberichten für Publikationen/Dissertationen durch die Software
+- Verbesserung der Zusammenarbeit und des Datenaustauschs innerhalb der Gruppe
+- Nahtloser Export von [FAIR](/docs/fair) und zitierfähigen Datensätzen in das [Chemotion Repository](https://www.chemotion-repository.net/welcome).
+- Integration der [SciFinder](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder) Suche
+- Viele Spektren können direkt in der Chemotion-Umgebung mit [ChemSpectra](https://eln.chemotion.net/chemspectra-editor) analysiert werden (einschließlich einer Plausibilitätsprüfung für NMR-Spektren)
 
-**When running your own Chemotion instance, you remain in control of your own data**
+**Wenn Sie Ihre eigene Chemotion-Instanz betreiben, behalten Sie die Kontrolle über Ihre eigenen Daten**
 
 :::
 
 :::info Info:
 
-The [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in German) provides a good overview of Chemotion as a tool in research data management.
+Das [Chemotion-Einführungsvideo] (https://www.youtube.com/watch?v=tZHaP6DW-Dw) gibt einen guten Überblick über Chemotion als Werkzeug für das Forschungsdatenmanagement.
 
 :::
 
-If you are already working with another ELN or prefer to stay with the traditional notebook, the data should still be published in a repository in a [FAIR manner](/docs/fair). Multiple [repositories](/docs/repositories/) already exist in chemistry. Nevertheless, even without using the Chemotion ELN, the data can still be transferred to the Chemotion Repository. Advantages of the Chemotion Repository include the assignment of a [DOI](/docs/pid/#dois) to the molecule and the collection of all analytical data in one place.
+Wenn Sie bereits mit einem anderen ELN arbeiten oder es vorziehen, beim traditionellen Notebook zu bleiben, sollten die Daten dennoch in einem Repositorium in einer [FAIRen Weise](/docs/fair) veröffentlicht werden. In der Chemie gibt es bereits mehrere [Repositorien](/docs/repositories/). Aber auch ohne die Nutzung des Chemotion ELN können die Daten in das Chemotion Repositorium übertragen werden. Zu den Vorteilen des Chemotion Repositoriums gehören die Vergabe eines [DOI](/docs/pid/#dois) für das Molekül und die Sammlung aller analytischen Daten an einem Ort.
 
-MS data can be deposited at [MassBank](https://massbank.eu/MassBank). With [nmrXiv](https://docs.nmrxiv.org/), a similar repository for NMR data is currently under construction. Computational data are well-preserved at [ioChem-BD](https://www.iochem-bd.org/).
+MS-Daten können bei [MassBank](https://massbank.eu/MassBank) hinterlegt werden. Mit [nmrXiv](https://docs.nmrxiv.org/) befindet sich ein ähnliches Repositorium für NMR-Daten derzeit im Aufbau. Computergestützte Daten sind unter [ioChem-BD](https://www.iochem-bd.org/) gut aufbewahrt.
 
-For a growing list of recommended chemistry repositories, please refer to our section on [how to choose the right repo](/docs/choose_repository).
+Eine wachsende Liste empfohlener Chemie-Repositorien finden Sie in unserem Abschnitt [how to choose the right repo](/docs/choose_repository).
 
