--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/30_student.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/30_student.mdx
@@ -3,61 +3,61 @@ title: "Student"
 slug: "/student"
 ---
 
-:::info Applies to:
-This article applies to students, who are about to start their bachelor or master thesis.
+:::info Gilt für:
+Dieser Artikel richtet sich an Studierende, die kurz vor dem Beginn ihrer Bachelor- oder Masterarbeit stehen.
 :::
 
 
-## Data production
+## Datenproduktion
 
-:::info How:           
-While working in the lab for a bachelor or master thesis plenty of data will be produced, for example the reaction protocol or the analytical data or [metadata](/docs/metadata).
+:::info Wie:           
+Während der Arbeit im Labor für eine Bachelor- oder Masterarbeit werden viele Daten produziert, zum Beispiel das Reaktionsprotokoll oder die analytischen Daten oder [Metadaten](/docs/metadata).
 :::
 
-:::note Note:        
-If you want to learn more about domain-specific data production methods, you can also look at the [domain-specific profiles](/docs/domain_guide).
+:::note Hinweis:        
+Wenn Sie mehr über domänenspezifische Datenproduktionsmethoden erfahren möchten, können Sie sich auch die [domänenspezifischen Profile](/docs/domain_guide) ansehen.
 :::
 
-## Data documentation
+## Datendokumentation
 
-:::danger Why:       
-The use of [well-organised](/docs/data_organisation) and [documented data](/docs/data_documentation) plays an important role in finding, searching, and using research data throughout the [data life cycle](/docs/data_life_cycle).
+:::danger Warum:       
+Die Verwendung von [gut organisierten](/docs/data_organisation) und [dokumentierten Daten](/docs/data_documentation) spielt eine wichtige Rolle beim Auffinden, Suchen und Verwenden von Forschungsdaten während des gesamten [Datenlebenszyklus](/docs/data_life_cycle).
 :::
 
-:::info How:         
-For the [documentation of these data](/docs/data_documentation), a classic paper-based lab journal or an [electronic lab journal](/docs/eln) (ELN) can be used.
+:::info Wie:         
+Für die [Dokumentation dieser Daten](/docs/data_documentation) kann ein klassisches Laborjournal auf Papier oder ein [elektronisches Laborjournal](/docs/eln) (ELN) verwendet werden.
 :::
 
-:::caution Considerations:              
-The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/data_documentation). But the use of an [ELN](/docs/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/format_standards), which is suitable for [publication](/docs/data_publication) in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/eln) is that it can be coupled with a [repository](/docs/repositories), which will ease the [publication process](/docs/data_publication). [Choose a repository](/docs/choose_repository), that is suitable for your data.
+:::caution Überlegungen:              
+Die Verwendung eines papierbasierten Laborjournals scheint eine einfache und effiziente Art der [Datendokumentation](/docs/data_documentation) zu sein. Die Verwendung eines [ELN](/docs/eln) wie [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) hat jedoch auf lange Sicht viele Vorteile. Zum Beispiel können in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) alle aus einem Experiment gewonnenen Daten mit Ihrem Protokoll verknüpft werden, was einen einfachen Weg darstellt, um am Ende der Arbeit einen [gut organisierten Forschungsdatensatz](/docs/data_organisation) zu haben. Zusätzlich kann das Reaktionsprotokoll in einer [standardisierten Form](/docs/format_standards) exportiert werden, die sich für die [Veröffentlichung](/docs/data_publication) im experimentellen Teil einer Dissertation oder eines Artikels eignet. <br/> Außerdem sind die Daten maschinenlesbar und damit leicht auffindbar, was ein Aspekt für [FAIR data](/docs/fair) ist (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Auch die weiteren Aspekte sollten erfüllt sein, dies erhöht die maschinelle Verwertbarkeit für die zukünftige Nutzung der Daten. Ein weiterer Vorteil eines [ELN](/docs/eln) ist, dass es mit einem [Repositorium](/docs/repositories) gekoppelt werden kann, was den [Publikationsprozess](/docs/data_publication) erleichtern wird. [Wählen Sie ein Repositorium](/docs/choose_repository), das für Ihre Daten geeignet ist.
 :::
 
 
-## Data processing
+## Datenverarbeitung
 
-:::danger Why:          
-The obtained raw data need to be processed for the interpretation, e.g. integration of NMR peaks or picking of IR bands.
+:::danger Warum:          
+Die gewonnenen Rohdaten müssen für die Interpretation aufbereitet werden, z.B. durch Integration von NMR-Peaks oder Auslesen von IR-Banden.
 :::
 
-:::info How:          
-Data can be processed by different software for each method. But an [ELN](/docs/eln) can give you one software tool for the processing of different methods. In [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) the software tool Chemspectra is implemented, which can be used for NMR and IR at the moment. Further methods will be added in the future.
+:::info Wie:          
+Die Daten können mit unterschiedlicher Software für jede Methode verarbeitet werden. Aber ein [ELN](/docs/eln) kann Ihnen ein Software-Tool für die Verarbeitung verschiedener Methoden zur Verfügung stellen. In [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) ist das Softwaretool Chemspectra integriert, das zur Zeit für NMR und IR verwendet werden kann. Weitere Methoden werden in Zukunft ergänzt.
 :::
 
 :::caution Considerations:         
-By [documenting](/docs/data_documentation) and processing data in the same software tool synergies will be obtained. For example Chemspectra can control automatically, if the integral of the NMR spectra fits to the target molecule of the connected synthesis. After processing your data in Chemspectra you can export your data in a standardised peak list, which can be added in the experimental section of a thesis or a [publication](/docs/data_publication).
+Durch die [Dokumentation](/docs/data_documentation) und die Bearbeitung der Daten im selben Softwaretool werden Synergien erzielt. Zum Beispiel kann Chemspectra automatisch kontrollieren, ob das Integral des NMR-Spektrums zum Zielmolekül der angeschlossenen Synthese passt. Nach der Bearbeitung Ihrer Daten in Chemspectra können Sie Ihre Daten in einer standardisierten Peakliste exportieren, die in den experimentellen Teil einer Dissertation oder einer [Publikation](/docs/data_publication) eingefügt werden kann.
 :::
 
 
-## Sharing, preserving and re-using data
+## Gemeinsame Nutzung, Bewahrung und Wiederverwendung von Daten
 
-:::danger Why:      
-Collaboration is easier if [well-organised data](/docs/data_organisation) is accessible. To conduct further research previous research can be reviewed and already existing data is reusable.
+:::danger Warum:      
+Die Zusammenarbeit ist einfacher, wenn [gut organisierte Daten](/docs/data_organisation) zugänglich sind. Für weitere Forschungen können frühere Forschungen überprüft werden und bereits vorhandene Daten sind wiederverwendbar.
 :::
 
-:::info How:          
-An [ELN](/docs/eln) represents a powerful internal database. Within [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) your own results can be searched by structure or keyword. Furthermore, scientific search engines like SciFinder can be implemented into an [ELN](/docs/eln). 
+:::info Wie:          
+Ein [ELN](/docs/eln) stellt eine leistungsfähige interne Datenbank dar. Innerhalb von [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) können die eigenen Ergebnisse nach Struktur oder Stichwort durchsucht werden. Außerdem können wissenschaftliche Suchmaschinen wie SciFinder in eine [ELN](/docs/eln) implementiert werden. 
 :::
 
-:::note Note:        
-By using the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html), research data and associated [metadata](/docs/metadata) are transferred directly to the [Chemotion repository](https://www.chemotion-repository.net/welcome) and automatically shared with other [repositories](https://www.re3data.org/).
+:::note Hinweis:        
+Durch die Nutzung des [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) werden Forschungsdaten und zugehörige [Metadaten](/docs/metadata) direkt in das [Chemotion repository](https://www.chemotion-repository.net/welcome) übertragen und automatisch mit anderen [Repositorien](https://www.re3data.org/) geteilt.
 :::
