--- a/i18n/de/docusaurus-plugin-content-docs/current/30_data/10_dmp.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/30_data/10_dmp.mdx
@@ -5,54 +5,54 @@ slug: "/dmp"
 
 import KbTagCloud from '@site/src/components/KbTagCloud.js';
 
-# Data Management Plan (DMP)
+# Datenmanagementplan (DMP)
 
-## Introduction
+## Einleitung
 
-Data management plans (DMP) help to outline how research data will be handled during and after a project to ensure preservation of the data and their [metadata](/docs/metadata). DMPs are particularly helpful when created prior to data collection to guarantee consistent [organisation](/docs/data_organisation), annotation, and formatting of the data. They can be used as part of quality and project management.
+Datenmanagementpläne (DMP) helfen dabei, zu skizzieren, wie Forschungsdaten während und nach einem Projekt gehandhabt werden, um die Erhaltung der Daten und ihrer [Metadaten](/docs/metadata) zu gewährleisten. DMPs sind besonders hilfreich, wenn sie vor der Datenerhebung erstellt werden, um eine einheitliche [Organisation](/docs/data_organisation), Kommentierung und Formatierung der Daten zu gewährleisten. Sie können als Teil des Qualitäts- und Projektmanagements eingesetzt werden.
 
-A DMP, like an [electronic laboratory notebook](/docs/eln) or even a laboratory information management system in chemistry, represents a type of documentation. These different types of documentation must be considered at different levels. A DMP answers the W-questions for documentation. 
+Ein DMP stellt ebenso wie ein [elektronisches Laborjournal](/docs/eln) oder auch ein Laborinformationsmanagementsystem in der Chemie eine Art der Dokumentation dar. Diese verschiedenen Arten der Dokumentation müssen auf verschiedenen Ebenen betrachtet werden. Ein DMP beantwortet die W-Fragen zur Dokumentation. 
 
-> "In a DMP a researcher or research team describes **What** data goes into a project (reuse) and comes out of it (potential reuse), **How** the team takes care of the data, and **Who** is allowed to do **What** with the data **When**."<sup>[1](https://www.openaire.eu/blogs/why-is-this-a-good-data-management-plan)</sup>
+> "In einem DMP beschreibt ein Forscher oder ein Forschungsteam, **welche** Daten in ein Projekt einfließen (Wiederverwendung) und aus ihm herauskommen (potenzielle Wiederverwendung), **wie** das Team mit den Daten umgeht und **wer** **was** mit den Daten **wann** tun darf."<sup>[1](https://www.openaire.eu/blogs/why-is-this-a-good-data-management-plan)</sup>
 
-In addition, the data management plan also addresses cross-cutting issues such as standards, ethics, responsibilities, and so on. The following [elements](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) are included in a DMP:
+Darüber hinaus befasst sich der Datenmanagementplan auch mit übergreifenden Themen wie Standards, Ethik, Verantwortlichkeiten usw. Folgende [Elemente](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html) sind in einem DMP enthalten:
 
-<KbTagCloud cloudTags={[ "Existing data", "Format", "Metadata", "Storage and backup", "Security", "Responsibility", "Intellectual property rights", "Access and sharing", "Audience", "Selection and retention periods", "Archiving and preservation", "Ethics and privacy", "Budget", "Data organization", "Quality Assurance", "Legal requirements" ]} min={20} max={35} shuffle={false} />
+<KbTagCloud cloudTags={[ "Vorhandene Daten", "Format", "Metadaten", "Speicherung und Sicherung", "Sicherheit", "Verantwortung", "Rechte an geistigem Eigentum", "Zugang und gemeinsame Nutzung", "Zielgruppe", "Auswahl und Aufbewahrungsfristen", "Archivierung und Erhaltung", "Ethik und Datenschutz", "Budget", "Datenorganisation", "Qualitätssicherung", "Rechtliche Anforderungen" ]} min={20} max={35} shuffle={false} />
 
 
-## Benefits of a DMP
+## Vorteile eines DMP
 
-In addition to funder compliance, there should be an intrinsic motivation for a DMP. The benefits of a data management plan are obvious in this process. A DMP
+Neben der Einhaltung der Vorschriften durch die Geldgeber sollte es auch eine intrinsische Motivation für ein DMP geben. Die Vorteile eines Datenmanagementplans liegen bei diesem Prozess auf der Hand. Ein DMP
 
-- supports your research, because the data is findable and understandable. It is clearly described in a DMP.
-- supports the data to be [FAIR](/docs/fair). In a DMP not only the findability is reflected, but also the accessibility, interoperability and reusability is described.
-- saves you time in the long-term, because all necessary information is summarised in a DMP.
-- helps you to think in advance and to consider issues connected with confidentiality, ethics, security and copyright directly from the project start.
-- offers continuity of knowledge and its transmission when new project members join.
+- unterstützt Ihre Forschung, weil die Daten auffindbar und verständlich sind. Sie sind in einem DMP klar beschrieben.
+- unterstützt die Daten, [FAIR](/docs/fair) zu sein. In einem DMP wird nicht nur die Auffindbarkeit abgebildet, sondern auch die Zugänglichkeit, Interoperabilität und Wiederverwendbarkeit beschrieben.
+- spart Ihnen langfristig Zeit, da alle notwendigen Informationen in einem DMP zusammengefasst sind.
+- hilft Ihnen, im Voraus zu denken und Fragen der Vertraulichkeit, der Ethik, der Sicherheit und des Urheberrechts gleich zu Beginn des Projekts zu berücksichtigen.
+- bietet Kontinuität des Wissens und seiner Weitergabe, wenn neue Projektmitglieder hinzukommen.
 
-## DMP from funders' perspective
+## DMP aus der Sicht der Förderer
 
-A number of research funders require DMPs at different stages of the project. It depends on the funder. For example, the EU expects a DMP after 6 months of the project start, in the middle as well as at the end of the project. In its Horizon Europe programme, the EU has been offering a new [DMP template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) to support DMP creation since May 2021. 
+Eine Reihe von Forschungsförderern verlangen DMP in verschiedenen Phasen des Projekts. Das hängt vom jeweiligen Geldgeber ab. Die EU zum Beispiel erwartet ein DMP 6 Monate nach Projektbeginn, in der Mitte und am Ende des Projekts. Die EU bietet in ihrem Programm Horizon Europe seit Mai 2021 eine neue [DMP-Vorlage] (https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) zur Unterstützung der DMP-Erstellung an. 
 
-The German funding agencies do not regulate it as strictly as it is by the EU. For example, in certain projects the BMBF requires a so-called exploitation plan or information on the use of the results as part of the application. This requirement is already included in the funding guidelines, for instance in the funding programme of ["Coastal Sea Research in the North Sea and Baltic Sea - Coasts in Transition"](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
+Die deutschen Förderorganisationen regeln dies nicht so streng wie die EU. So verlangt das BMBF bei bestimmten Projekten einen sogenannten Verwertungsplan oder Angaben zur Nutzung der Ergebnisse als Teil des Antrags. Diese Forderung ist bereits in den Förderrichtlinien enthalten, zum Beispiel im Förderprogramm ["Küstenmeerforschung in Nord- und Ostsee - Küsten im Wandel"] (https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
 
-The DFG has been offering a [checklist](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html) for assistance in handling research data since June 2021. This checklist includes the same topics as a DMP template, which are data description, documentation and data quality, storage and technical archiving the project, legal obligations and conditions, data exchange and long-term data accessibility as well as responsibilities and resources. The DFG also emphasises the use of subject-specific recommendations on standards, methods and infrastructures. Furthermore, the DFG makes a clear statement on its website. "… so it must be handled just as carefully and consideration must be given to a technically adequate option for subsequent reuse whenever appropriate and possible. The same applies if software is required for the creation or processing of research data. For this reason, the DFG expects research projects to include a description of how research data is handled. The description should be based on the checklist for handling research data."
+Die DFG bietet seit Juni 2021 eine [Checkliste](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html) zur Unterstützung im Umgang mit Forschungsdaten an. Diese Checkliste umfasst die gleichen Themen wie eine DMP-Vorlage, nämlich Datenbeschreibung, Dokumentation und Datenqualität, Speicherung und technische Archivierung des Projekts, rechtliche Verpflichtungen und Rahmenbedingungen, Datenaustausch und langfristige Datenverfügbarkeit sowie Verantwortlichkeiten und Ressourcen. Die DFG betont auch die Verwendung von fachspezifischen Empfehlungen zu Standards, Methoden und Infrastrukturen. Darüber hinaus macht die DFG auf ihrer Website eine klare Aussage. "... daher ist mit ihr ebenso sorgfältig umzugehen und eine technisch adäquate Option für eine spätere Wiederverwendung zu erwägen, wann immer dies sinnvoll und möglich ist. Gleiches gilt, wenn Software für die Erstellung oder Verarbeitung von Forschungsdaten benötigt wird. Die DFG erwartet daher, dass Forschungsprojekte eine Beschreibung des Umgangs mit Forschungsdaten enthalten. Die Beschreibung sollte sich an der Checkliste zum Umgang mit Forschungsdaten orientieren."
 
-## DMP Tools
+## DMP-Tools
 
-The creation of a DMP can be supported by various tools. Some of the most common tools are:
+Die Erstellung eines DMP kann durch verschiedene Tools unterstützt werden. Einige der gängigsten Tools sind:
 
-[DMPOnline](https://dmponline.dcc.ac.uk/) was developed by the UK Digital Curation Centre (DCC). It includes a template for Horizon Europe projects as well as from the main UK funders. It also provides short general explanations for every single question. DMPOnline and DMPTool are based on the software DMPRoadmap.
+[DMP-Online] (https://dmponline.dcc.ac.uk/) wurde vom UK Digital Curation Centre (DCC) entwickelt. Es enthält eine Vorlage für Horizon Europe-Projekte sowie für die wichtigsten britischen Förderer. Außerdem enthält es kurze allgemeine Erklärungen zu jeder einzelnen Frage. DMPOnline und DMPTool basieren auf der Software DMPRoadmap.
 
-[DMPTool](https://dmptool.org/) is run by the California Digital Library. Due to the different funding landscape in the US, the tool is only of limited use for German/European projects. One advantage is that DMPTool provides DMP examples on the website. It can be used without using the tool.
+[DMPTool] (https://dmptool.org/) wird von der California Digital Library betrieben. Aufgrund der unterschiedlichen Förderlandschaft in den USA ist das Tool für deutsche/europäische Projekte nur bedingt geeignet. Ein Vorteil ist, dass DMPTool auf der Website DMP-Beispiele bereitstellt. Es kann auch ohne das Tool genutzt werden.
 
-[Research Data Management Organiser (RDMO)](https://rdmo.aip.de/) is run at 45 research institutions in Germany and abroad (as of January 2022). It was developed in a DFG-funded project (2015–2020) and is now further maintained by the RDMO working group as an open source software. It offers several "question catalogs" for specific funding programs, disciplines, or research consortia. They enable researchers to organise their data management with the help of precisely formulated questions, help texts, multiple-choice answers. User-created catalogs may be reused and are available for download in a [central repository](https://github.com/rdmorganiser/rdmo-catalog).
+Der [Research Data Management Organiser (RDMO)] (https://rdmo.aip.de/) wird an 45 Forschungseinrichtungen in Deutschland und im Ausland betrieben (Stand Januar 2022). Er wurde in einem DFG-geförderten Projekt (2015-2020) entwickelt und wird nun von der Arbeitsgruppe RDMO als Open-Source-Software weiter gepflegt. Sie bietet mehrere "Fragenkataloge" für bestimmte Förderprogramme, Disziplinen oder Forschungskonsortien. Sie ermöglichen es Forschern, ihr Datenmanagement mit Hilfe von präzise formulierten Fragen, Hilfetexten und Multiple-Choice-Antworten zu organisieren. Die von den Nutzern erstellten Kataloge können wiederverwendet werden und stehen in einem [zentralen Repositorium] (https://github.com/rdmorganiser/rdmo-catalog) zum Download bereit.
 
-To further support researchers in answering the questions, working groups have been formed, e.g. in Science Europe or the Research Data Alliance (RDA). The Science Europe Group is focusing on improving the general help texts, while the working group in the RDA focuses on [discipline-specific guidance](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe set up a new version of the [practical guide](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) in January 2021. 
+Um Forscher bei der Beantwortung der Fragen weiter zu unterstützen, haben sich Arbeitsgruppen gebildet, z.B. in Science Europe oder der Research Data Alliance (RDA). Die Science Europe Gruppe konzentriert sich auf die Verbesserung der allgemeinen Hilfetexte, während die Arbeitsgruppe in der RDA sich auf [disziplinspezifische Anleitungen] konzentriert (https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe hat im Januar 2021 eine neue Version des [praktischen Leitfadens](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) erstellt. 
 
-A comparison of commonly used DMP tools can be found in the [DMP-Toolguide](https://zenodo.org/record/4632308).
+Ein Vergleich der gängigen DMP-Tools findet sich im [DMP-Toolguide](https://zenodo.org/record/4632308).
 
-## Sources and further information
+## Quellen und weitere Informationen
 
 - [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)
 - [DFG guidelines on research data](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html)
